--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,20 +3,22 @@
 @import "vars";
 @import "mixins";
 #main-visual {
-  height: 100vh;
+  height: calc(100vh);
   overflow: hidden;
   background-image: url("../images/main/bg_main_visual.jpg");
-  background-position: 0 100%;
+  background-position: 0 0;
   background-repeat: no-repeat;
-  background-size: 150%;
+  background-size: cover;
+  position: relative;
   .mask {
-    width: 1280px;
-    height: 850px;
+    width: 100%;
+    height: 280px;
     position: absolute;
-    right: 0;
+    right: auto;
+    left: 30px;
     bottom: 0;
     overflow: hidden;
-    border-radius: 100px 0 0 0;
+    border-radius: 40px 0 0 0;
 
     .main-mask {
       height: 100%;
@@ -39,26 +41,32 @@
   }
   > .contents {
     width: 100%;
-    //margin-top: 500px; // 만약 부모의 첫번째 자식요소가  margin을 가지면 여백을 생성시킨다. 이때 부모에게 overflow:hidden을 주면 원상 복구된다.
     position: absolute;
-    bottom: 150px;
     z-index: 2;
     color: #fff;
     user-select: none;
+    top: 100px;
+    height: 100vh;
+    padding-left: 30px;
+    box-sizing: border-box;
     .title {
-      font-size: 68px;
+      font-size: clamp(20px, 7.5vw, 32px);
       font-weight: 900;
       text-shadow: 3px 3px 3px rgba(0, 0, 0, 0.1);
       user-select: none;
       pointer-events: none;
     }
     .pagination {
-      margin-top: 50px;
+      position: absolute;
+      margin-top: 0;
+      left: 30px;
+      top: 210px;
+      bottom: auto;
       .swiper-pagination-bullet {
-        width: 60px;
-        height: 4px;
+        width: 10px;
+        height: 10px;
         opacity: 1;
-        border-radius: 0;
+        border-radius: 100px;
         background-color: #fff;
         &-active {
           background-color: $point-color;
@@ -67,41 +75,51 @@
     }
     .news-and-notice {
       display: flex;
-      justify-content: space-between;
-      margin-top: 200px;
+      flex-direction: column;
+      margin-top: 30px;
     }
     .news {
-      width: 350px;
+      width: 100%;
+      padding-right: 30px;
+      box-sizing: border-box;
       word-break: keep-all;
       h3 {
-        margin-bottom: 30px;
-        padding-bottom: 30px;
-        font-size: $h3;
+        margin-bottom: 15px;
+        padding-bottom: 15px;
+        font-size: 18px;
+        line-height: 1.25;
         border-bottom: 1px solid #fff;
+        @include ellipsis;
       }
       .desc {
         line-height: 1.5;
+        font-size: 14px;
+        @include multiElilipsis;
         br {
           content: "";
         }
       }
     }
     .notice {
-      width: 820px;
+      width: 100%;
+      position: absolute;
+      bottom: -10px;
+      left: 0;
       .title-box {
         display: flex;
         justify-content: space-between;
         margin-bottom: 30px;
         color: #fff;
+        display: none;
         h2 {
-          font-size: 24px;
+          font-size: 18px;
           font-weight: 500;
           text-transform: uppercase;
         }
       }
       .contents {
         position: relative;
-        padding: 20px;
+        padding: 15px;
         color: #111;
         background-color: #fff;
         li {
@@ -113,7 +131,7 @@
           width: 80px;
           height: 80px;
           overflow: hidden;
-          margin-right: 30px;
+          margin-right: 20px;
           font-weight: 700;
           text-align: center;
           color: #fff;
@@ -126,12 +144,17 @@
           }
         }
         .txt {
+          width: calc(100% - 100px);
+          font-size: 14px;
+          line-height: 1.5;
           h3 {
             margin-bottom: 10px;
-            font-size: $h3 - 2px;
+            font-size: 18px;
+            @include ellipsis;
           }
         }
         .btns {
+          display: none;
           position: absolute;
           top: 50%;
           right: 30px;
@@ -151,6 +174,7 @@
           font-size: 20px;
           font-weight: 700;
           transform: translateY(-50%);
+          display: none;
         }
       }
     }
