--- a/css/main.css
+++ b/css/main.css
@@ -1,18 +1,20 @@
+body {
+  overflow-x: hidden;
+}
+
 #main-visual {
   height: 100vh;
-  overflow: hidden;
   background-image: url("../images/main/bg_main_visual.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
 }
 #main-visual .mask {
   width: 100%;
   height: 280px;
   position: absolute;
   right: auto;
-  left: 30px;
+  left: 20px;
   bottom: 0;
   overflow: hidden;
   border-radius: 40px 0 0 0;
@@ -36,15 +38,14 @@
   background-image: url("../images/main/history_img2.jpg");
 }
 #main-visual > .contents {
+  padding: 100px 20px 0;
   width: 100%;
-  position: absolute;
   z-index: 2;
   color: #fff;
   user-select: none;
-  top: 100px;
-  height: 100vh;
-  padding-left: 30px;
   box-sizing: border-box;
+  position: relative;
+  height: 100vh;
 }
 #main-visual > .contents .title {
   font-size: clamp(20px, 7.5vw, 32px);
@@ -56,8 +57,8 @@
 #main-visual > .contents .pagination {
   position: absolute;
   margin-top: 0;
-  left: 30px;
-  top: 210px;
+  left: 20px;
+  top: 300px;
   bottom: auto;
 }
 #main-visual > .contents .pagination .swiper-pagination-bullet {
@@ -106,9 +107,9 @@
 }
 #main-visual > .contents .notice {
   width: 100%;
-  position: absolute;
-  bottom: -10px;
   left: 0;
+  position: absolute;
+  bottom: -110px;
 }
 #main-visual > .contents .notice .title-box {
   display: flex;
