--- a/scss/main.scss
+++ b/scss/main.scss
@@ -2,20 +2,21 @@
 
 @import "vars";
 @import "mixins";
+body {
+  overflow-x: hidden;
+}
 #main-visual {
-  height: calc(100vh);
-  overflow: hidden;
+  height: 100vh;
   background-image: url("../images/main/bg_main_visual.jpg");
   background-position: 0 0;
   background-repeat: no-repeat;
   background-size: cover;
-  position: relative;
   .mask {
     width: 100%;
     height: 280px;
     position: absolute;
     right: auto;
-    left: 30px;
+    left: 20px;
     bottom: 0;
     overflow: hidden;
     border-radius: 40px 0 0 0;
@@ -40,15 +41,14 @@
     }
   }
   > .contents {
+    padding: 100px 20px 0;
     width: 100%;
-    position: absolute;
     z-index: 2;
     color: #fff;
     user-select: none;
-    top: 100px;
-    height: 100vh;
-    padding-left: 30px;
     box-sizing: border-box;
+    position: relative;
+    height: 100vh;
     .title {
       font-size: clamp(20px, 7.5vw, 32px);
       font-weight: 900;
@@ -59,8 +59,8 @@
     .pagination {
       position: absolute;
       margin-top: 0;
-      left: 30px;
-      top: 210px;
+      left: 20px;
+      top: 300px;
       bottom: auto;
       .swiper-pagination-bullet {
         width: 10px;
@@ -102,9 +102,9 @@
     }
     .notice {
       width: 100%;
-      position: absolute;
-      bottom: -10px;
       left: 0;
+      position: absolute;
+      bottom: -110px;
       .title-box {
         display: flex;
         justify-content: space-between;
