--- a/css/main.css
+++ b/css/main.css
@@ -189,24 +189,28 @@ body {
 }
 
 .section {
-  padding: 200px 0;
+  padding: 50px 20px;
 }
 .section .title-box h2 {
-  font-size: 32px;
+  font-size: clamp(18px, 8.5vw, 24px);
   margin-bottom: 30px;
+}
+.section .title-box h2 br {
+  content: "";
 }
 .section .title-box h2 strong {
   font-weight: 700;
   color: #0467b3;
 }
 .section .title-box p {
-  font-size: 17px;
+  font-size: 14px;
   color: #666;
   word-break: keep-all;
   margin-bottom: 30px;
   line-height: 1.5;
 }
-.section .title-box .more {
+.section .more {
+  margin: 50px auto 0;
   width: 200px;
   height: 60px;
   display: flex;
@@ -219,7 +223,7 @@ body {
   font-weight: 700;
   font-size: 14px;
 }
-.section .title-box .more:after {
+.section .more:after {
   content: "\f061";
   font-family: "FontAwesome";
   display: block;
@@ -228,24 +232,13 @@ body {
 #research {
   overflow: hidden;
   position: relative;
-}
-#research:before {
-  content: "";
-  display: block;
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 800px;
-  height: 800px;
-  background-color: #ccc;
-  border-radius: 0 0 100px 0;
+  padding-top: 160px;
 }
 #research .title-box {
-  position: absolute;
-  width: 300px;
+  text-align: center;
 }
 #research .title-box .btns {
-  display: flex;
+  display: none;
   width: 300px;
   justify-content: space-between;
   margin-left: -30px;
@@ -267,12 +260,13 @@ body {
   content: "\f061";
   font-family: "FontAwesome";
 }
+#research .title-box .more {
+  display: none;
+}
 #research .banner {
   overflow: hidden;
-  width: 100vw;
 }
 #research .banner .mask {
-  margin-left: 400px;
   overflow: hidden;
 }
 #research .banner .mask li .img-box {
@@ -305,11 +299,14 @@ body {
   margin-left: 10px;
 }
 
+#fund .title-box {
+  text-align: center;
+}
 #fund .fund-list {
   border-top: 4px solid #111;
 }
 #fund .fund-list li {
-  padding: 30px;
+  padding: 20px;
   border-bottom: 1px solid #ccc;
 }
 #fund .fund-list li .main {
@@ -324,8 +321,9 @@ body {
 #fund .fund-list li .main {
   display: flex;
   justify-content: space-between;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 500;
+  flex-direction: column;
 }
 #fund .fund-list li .main p {
   display: flex;
@@ -338,6 +336,12 @@ body {
   height: 4px;
   background-color: #0467b3;
   margin-right: 15px;
+  display: none;
+}
+#fund .fund-list li .main .date {
+  font-size: 14px;
+  color: #999;
+  margin-top: 10px;
 }
 #fund .fund-list li .main .date:before {
   content: "\f017";
@@ -359,31 +363,38 @@ body {
   justify-content: center;
   align-items: center;
   border-radius: 10px;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 700;
   overflow: hidden;
   text-shadow: 1px 1px 0px #034a81,2px 2px 0px #034a81,3px 3px 0px #034a81,4px 4px 0px #034a81,5px 5px 0px #034a81,6px 6px 0px #034a81,7px 7px 0px #034a81,8px 8px 0px #034a81,9px 9px 0px #034a81,10px 10px 0px #034a81,11px 11px 0px #034a81,12px 12px 0px #034a81,13px 13px 0px #034a81,14px 14px 0px #034a81,15px 15px 0px #034a81,16px 16px 0px #034a81,17px 17px 0px #034a81,18px 18px 0px #034a81,19px 19px 0px #034a81,20px 20px 0px #034a81,21px 21px 0px #034a81,22px 22px 0px #034a81,23px 23px 0px #034a81,24px 24px 0px #034a81,25px 25px 0px #034a81,26px 26px 0px #034a81,27px 27px 0px #034a81,28px 28px 0px #034a81,29px 29px 0px #034a81,30px 30px 0px #034a81,31px 31px 0px #034a81,32px 32px 0px #034a81,33px 33px 0px #034a81,34px 34px 0px #034a81,35px 35px 0px #034a81,36px 36px 0px #034a81,37px 37px 0px #034a81,38px 38px 0px #034a81,39px 39px 0px #034a81,40px 40px 0px #034a81,41px 41px 0px #034a81,42px 42px 0px #034a81,43px 43px 0px #034a81,44px 44px 0px #034a81,45px 45px 0px #034a81,46px 46px 0px #034a81,47px 47px 0px #034a81,48px 48px 0px #034a81,49px 49px 0px #034a81,50px 50px 0px #034a81,51px 51px 0px #034a81,52px 52px 0px #034a81,53px 53px 0px #034a81,54px 54px 0px #034a81,55px 55px 0px #034a81,56px 56px 0px #034a81,57px 57px 0px #034a81,58px 58px 0px #034a81,59px 59px 0px #034a81,60px 100px 0px #034a81;
 }
 #fund .fund-list li .contents .date strong {
-  font-size: 48px;
+  font-size: 36px;
+}
+#fund .fund-list li .contents .txt {
+  width: calc(100% - 100px);
+  box-sizing: border-box;
+  padding-left: 20px;
 }
 #fund .fund-list li .contents a {
-  font-size: 18px;
-  padding: 0 0 0 25px;
+  font-size: 14px;
+  padding: 0 0 0 0;
+  line-height: 1.5;
 }
 #fund .fund-list li .contents a:hover {
   text-decoration: underline;
 }
 #fund .fund-list li .contents a .title {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 700;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
 }
 #fund .fund-list li .contents a .desc {
   opacity: 0.5;
 }
 #fund .fund-list li .contents .img-box {
   margin-left: auto;
+  display: none;
 }
 
 .btn-top {
@@ -418,24 +429,34 @@ body {
 }
 #about .container {
   display: flex;
-  justify-content: space-between;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 #about .title-box {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  width: 100%;
 }
 #about .title-box h2 {
+  width: 100%;
   font-weight: 900;
-  font-size: 56px;
+  font-size: 32px;
   border-top: 1px solid rgba(255, 255, 255, 0.5);
   border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  text-align: center;
   padding: 30px 0;
 }
+#about .title-box h2 br {
+  display: block;
+}
 #about .title-box p {
+  text-align: center;
   color: #fff;
-  font-size: 20px;
+  font-size: 16px;
+  line-height: 1.5;
+  width: 100%;
 }
 #about .title-box .since {
   font-weight: 900;
@@ -445,17 +466,16 @@ body {
 #about .organization ul {
   display: flex;
   flex-wrap: wrap;
-  width: 650px;
 }
 #about .organization ul li {
-  width: calc(33.33% - 10px);
+  width: calc(50% - 10px);
   margin: 5px;
 }
 #about .organization ul li a {
   background-color: rgba(255, 255, 255, 0.1);
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 500;
-  height: 150px;
+  height: 120px;
   display: block;
   padding: 20px;
   box-sizing: border-box;
@@ -493,13 +513,20 @@ body {
   bottom: 20px;
 }
 
+#department .title-box {
+  text-align: center;
+}
 #department .contents-box {
   display: flex;
   justify-content: space-between;
   margin-top: 80px;
+  flex-direction: column;
 }
 #department .contents-box .contents {
-  width: calc(50% - 40px);
+  margin-top: 50px;
+}
+#department .contents-box .contents:nth-child(1) {
+  margin-top: 0;
 }
 #department .contents-box .contents .title {
   display: flex;
@@ -519,7 +546,7 @@ body {
   margin: -10px;
 }
 #department .contents-box .contents ul li {
-  width: calc(33.33% - 20px);
+  width: calc(50% - 20px);
   margin: 10px;
 }
 #department .contents-box .contents ul li a {
@@ -548,9 +575,14 @@ body {
 #community .container {
   display: flex;
   justify-content: space-between;
+  flex-direction: column;
 }
 #community .title-box {
   position: relative;
+  text-align: center;
+}
+#community .title-box br {
+  display: block;
 }
 #community .title-box h2 strong {
   color: #fff;
@@ -562,11 +594,17 @@ body {
   display: flex;
   align-items: center;
 }
+#community .title-box .control .fraction {
+  display: none;
+}
+#community .title-box .control .btns {
+  display: none;
+}
 #community .title-box .pagination {
   position: relative;
   height: 4px;
-  width: 50%;
-  margin: 0 20px;
+  width: 100%;
+  margin: 0 0;
 }
 #community .title-box .swiper-pagination-progressbar {
   background: rgba(255, 255, 255, 0.5);
@@ -576,16 +614,17 @@ body {
 }
 #community .banner {
   position: relative;
+  display: flex;
+  flex-direction: column-reverse;
 }
-#community .mask {
-  width: 580px;
-  margin-top: -300px;
+#community .banner li img {
+  width: 100%;
+  height: 300px;
+  object-fit: cover;
+  border-radius: 20px;
 }
 #community .link {
-  position: absolute;
-  left: -250px;
-  bottom: 100px;
-  z-index: 2;
+  margin-top: 50px;
 }
 #community .link ul li {
   margin: 10px 0;
@@ -597,14 +636,13 @@ body {
 }
 #community .link ul li a {
   display: flex;
-  height: 60px;
-  width: 330px;
+  height: 50px;
   align-items: center;
   background-color: #022e4f;
   color: #fff;
   padding-left: 40px;
   font-weight: 500;
-  font-size: 18px;
+  font-size: 16px;
   transition: all 0.5s ease;
   border-left: 5px solid transparent;
 }
